After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751622 - test_ABI: failed ABI check
test_ABI: failed ABI check
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-29 01:59 UTC by Vineeth
Modified: 2015-08-16 13:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
update abi check structure (1.41 KB, patch)
2015-06-29 02:00 UTC, Vineeth
rejected Details | Review

Description Vineeth 2015-06-29 01:59:24 UTC
while running make check in Gstreamer plugins, it fails
 with below error
 sizeof(GstDirectControlBinding) is 152, expected 148
 This is because, gboolean want_absolute; is added in
 GstDirectControlBinding, and the same was not updated in ABI check
Comment 1 Vineeth 2015-06-29 02:00:14 UTC
Created attachment 306256 [details] [review]
update abi check structure
Comment 2 Tim-Philipp Müller 2015-06-29 09:44:05 UTC
Thanks for the report, this should fix it:

 commit 86abdbfb5552a11219275e5b597e7d8b476748b2
 Author: Tim-Philipp Müller <tim@centricular.com>
 Date:   Mon Jun 29 10:41:27 2015 +0100

    directcontrolbinding: fix ABI break
    
    Structure size was increased without adjustment of the padding.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751622
    https://bugzilla.gnome.org/show_bug.cgi?id=740502
Comment 3 Tim-Philipp Müller 2015-06-29 09:45:34 UTC
Comment on attachment 306256 [details] [review]
update abi check structure

This is not the right fix, the point of checking the structure sizes is that the size shouldn't change. The way GObject works, with nested structures, means that if the size of a subclassable object structure changes, this breaks ABI for all subclasses.